--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,7 +5,7 @@
 }
 body {
     font-family: Arial, sans-serif;
-    background: url('/assets/imgs/background.jpg');
+    background: url('https://images.unsplash.com/photo-1745282480794-10427e218c76?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
